@@ -1,3 +1,8 @@
+2007-11-30  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/utils.h:
+	Added uri_is_valid() function for URI verification
+
 2007-11-29  koos  <kjniesink@yahoo.co.uk>
 
 	* src/gnome-cmd-file.cc:
